opam-version: "2.0"
version: "2.8.1"
author: "Simon Cruanes"
maintainer: "simon.cruanes.2007@m4x.org"
synopsis: "A set of advanced datatypes for containers"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name ] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" { >= "4.03.0" }
  "dune" { >= "1.1" }
  "containers" { = version }
  "seq"
  "qtest" { with-test }
  "qcheck" { with-test }
  "ounit" { with-test }
  "iter" { with-test }
  "gen" { with-test }
  "mdx" { with-test & >= "1.5.0" & < "2.0.0" }
  "odoc" { with-doc }
]
tags: [ "containers" "RAL" "functional" "vector" "okasaki" ]
homepage: "https://github.com/c-cube/ocaml-containers/"
doc: "https://c-cube.github.io/ocaml-containers"
dev-repo: "git+https://github.com/c-cube/ocaml-containers.git"
bug-reports: "https://github.com/c-cube/ocaml-containers/issues/"
