opam-version: "2.0"
version: "3.11"
author: "Simon Cruanes"
maintainer: "simon.cruanes.2007@m4x.org"
synopsis: "A set of advanced datatypes for containers"
license: "BSD-2-Clause"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name ] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test & arch != "x86_32" & arch != "arm32"}
]
depends: [
  "ocaml" { >= "4.03.0" }
  "dune" { >= "2.0" }
  "containers" { = version }
  "seq"
  (("ocaml" {with-test & < "4.08"} & "qcheck-core" {>= "0.17" & with-test})
  | ("ocaml" {with-test & >= "4.08"} & "qcheck-core" {>= "0.20" & with-test}))
  "iter" { with-test }
  "gen" { with-test }
  "mdx" { with-test }
  "odoc" { with-doc }
]
tags: [ "containers" "RAL" "functional" "vector" "okasaki" ]
homepage: "https://github.com/c-cube/ocaml-containers/"
doc: "https://c-cube.github.io/ocaml-containers"
dev-repo: "git+https://github.com/c-cube/ocaml-containers.git"
bug-reports: "https://github.com/c-cube/ocaml-containers/issues/"
