opam-version: "2.0"
name: "containers"
version: "2.8.1"
author: "Simon Cruanes"
maintainer: "simon.cruanes.2007@m4x.org"
synopsis: "A modular, clean and powerful extension of the OCaml standard library"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name ] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" { >= "4.03.0" }
  "dune" { >= "1.1" }
  "dune-configurator"
  "seq"
  "qtest" { with-test }
  "qcheck" { with-test }
  "ounit" { with-test }
  "iter" { with-test }
  "gen" { with-test }
  "uutf" { with-test }
  "odoc" { with-doc }
]
depopts: [
  "base-unix"
  "base-threads"
]
tags: [ "stdlib" "containers" "iterators" "list" "heap" "queue" ]
homepage: "https://github.com/c-cube/ocaml-containers/"
doc: "https://c-cube.github.io/ocaml-containers"
dev-repo: "git+https://github.com/c-cube/ocaml-containers.git"
bug-reports: "https://github.com/c-cube/ocaml-containers/issues/"
