opam-version: "2.0"
name: "containers"
version: "3.12"
author: "Simon Cruanes"
maintainer: "simon.cruanes.2007@m4x.org"
license: "BSD-2-Clause"
synopsis: "A modular, clean and powerful extension of the OCaml standard library"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name ] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test & arch != "x86_32" & arch != "arm32"}
]
depends: [
  "ocaml" { >= "4.03.0" }
  "dune" { >= "2.0" }
  "dune-configurator"
  "seq" # compat
  "either" # compat
  (("ocaml" {with-test & < "4.08"} & "qcheck-core" {>= "0.17" & with-test})
  | ("ocaml" {with-test & >= "4.08"} & "qcheck-core" {>= "0.18" & with-test}))
  "yojson" { with-test }
  "iter" { with-test }
  "gen" { with-test }
  "csexp" { with-test }
  "uutf" { with-test }
  "odoc" { with-doc }
]
depopts: [
  "base-unix"
  "base-threads"
]
tags: [ "stdlib" "containers" "iterators" "list" "heap" "queue" ]
homepage: "https://github.com/c-cube/ocaml-containers/"
doc: "https://c-cube.github.io/ocaml-containers"
dev-repo: "git+https://github.com/c-cube/ocaml-containers.git"
bug-reports: "https://github.com/c-cube/ocaml-containers/issues/"
