(rule
 (targets README.md.corrected)
 (deps
  (package containers-data)
  ./src/mdx_runner.exe)
 (enabled_if
  (= %{system} "linux"))
 (action
  (run ./src/mdx_runner.exe)))

(rule
 (alias runtest)
 (package containers-data)
 (enabled_if
  (= %{system} "linux"))
 (locks /ctest)
 (action
  (diff README.md README.md.corrected)))

(env
 (_
  (flags
   :standard
   -warn-error
   -a+8
   -w
   -32-48-60-70
   -w
   +a-4-40-42-44-70
   -color
   always
   -safe-string
   -strict-sequence)
  (ocamlopt_flags
   :standard
   -O3
   -unbox-closures
   -unbox-closures-factor
   20
   -inline
   100)))
