(executables
 (names run_benchs run_bench_hash run_objsize)
 (libraries
  containers
  containers_pvec
  containers-data
  benchmark
  gen
  iter
  qcheck
  oseq
  batteries
  base
  sek)
 (flags :standard -warn-error -3-5 -w -60 -safe-string -color always)
 (optional)
 (ocamlopt_flags
  :standard
  -O3
  -color
  always
  -unbox-closures
  -unbox-closures-factor
  20))
