
(executables
  (names id_sexp ccparse_sexp ccparse_irclogs)
  (libraries containers)
  ;(modules id_sexp)
  (flags :standard -warn-error -a+8 -safe-string -color always)
  (ocamlopt_flags :standard -O3 -color always
                   -unbox-closures -unbox-closures-factor 20))

(alias
  (name runtest)
  (locks /ctest)
  (deps (source_tree test_data))
  (action
    (ignore-stdout
      (run ./id_sexp.exe test_data/benchpress.sexp))))

(alias
  (name runtest)
  (locks /ctest)
  (deps (source_tree test_data))
  (action
    (ignore-stdout
      (run ./ccparse_sexp.exe test_data/benchpress.sexp))))

(alias
  (name runtest)
  (locks /ctest)
  (deps (source_tree test_data))
  (action
    (ignore-stdout
      (run ./ccparse_irclogs.exe test_data/irc-logs.txt))))
