(executable
  (name mkflags)
  (modules mkflags)
  (libraries dune.configurator))

(executable
  (name unlabel)
  (modules unlabel)
  (libraries compiler-libs.common))

(env
  (_ (flags :standard -warn-error -3)))

(rule
  (targets flambda.flags)
  (mode fallback)
  (action
    (run ./mkflags.exe))
  )
