(env
 (_
  (flags :standard -warn-error -a+8 -w -32-70 -w +a-4-32-40-42-44-70
         -color always -safe-string -strict-sequence)
  (ocamlopt_flags :standard -O3 -unbox-closures -unbox-closures-factor 20
    -inline 100)))

(executable
 (name mdx_runner)
 (libraries containers)
 (modules mdx_runner))
