(library
 (name containers)
 (public_name containers)
 (wrapped false)
 (preprocess
  (per_module
   ((action (run %{project_root}/src/core/cpp/cpp.exe %{input-file}))
    CCAtomic CCList CCVector)
   ((pps bisect_ppx))))
 (flags :standard -nolabels -open CCMonomorphic)
 (libraries either containers.monomorphic containers.domain))

(ocamllex
 (modules CCSexp_lex))
