(executable
 (name t_appendix_a)
 (modules t_appendix_a)
 (preprocess
  (action
   (run %{project_root}/src/core/cpp/mucppo.exe %{input-file})))
 (libraries yojson containers containers.cbor))

(rule
 (alias runtest)
 (deps t_appendix_a.exe appendix_a.json)
 (package containers)
 (action
  (run ./t_appendix_a.exe ./appendix_a.json)))
