(executable
 (name t_appendix_a)
 (preprocess (action (run %{project_root}/src/core/cpp/cpp.exe %{input-file})))
 (libraries yojson containers containers.cbor))

(rule
 (targets t_appendix_a.out)
 (action
   (with-stdout-to %{targets}
    (run ./t_appendix_a.exe ./appendix_a.json))))

(rule
  (alias runtest)
  (action (diff ./t_appendix_a.expected ./t_appendix_a.out)))
