(executable
 (name t_appendix_a)
 (modules t_appendix_a)
 (preprocess
  (action
   (run %{project_root}/src/core/cpp/cpp.exe %{input-file})))
 (libraries yojson containers containers.cbor))

(rule
 (alias runtest)
 (deps t_appendix_a.exe appendix_a.json)
 (action
  (run ./t_appendix_a.exe ./appendix_a.json)))

(executable
 (name t)
 (modules t)
 (libraries qcheck-core qcheck-core.runner containers containers.cbor))

(rule
 (alias runtest)
 (action
  (run ./t.exe --no-colors)))
