

(executable
  (name check_labelled_mods)
  (modules check_labelled_mods)
  (flags :standard -warn-error -a -w -3-33-35-27-39-50 -nolabels)
  (libraries containers))

(executable
  (name test_hash)
  (modules test_hash)
  (flags :standard -warn-error -a+8)
  (libraries containers iter))

(executable
  (name test_random)
  (flags :standard -warn-error -a+8)
  (modules test_random)
  (libraries containers))

(executable
  (name test_csexp)
  (flags :standard -warn-error -a+8)
  (modules test_csexp)
  (libraries containers csexp qcheck-core qcheck))

(alias
  (name runtest)
  (locks /ctest)
  (package containers)
  (action (run ./test_random.exe)))

(alias
  (name runtest)
  (locks /ctest)
  (package containers)
  (action (run ./test_csexp.exe)))

; what matters is that it compiles
(alias
  (name runtest)
  (locks /ctest)
  (package containers)
  (action  (run ./check_labelled_mods.exe)))
